<?xml version="1.0"?>
<package format="2">
  <name>get_out_of_collision</name>
  <version>0.0.0</version>
  <description>The get_out_of_collision package contains a node to get out 
    of collision state using MoveIt!</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_msgs</depend>
  <depend>rospy</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>std_srvs</depend>

</package>